Apply several OpenRewrite rules.